# uniunified-gaussian-primitives

./: LICENSE  README.md  collide.cpp
Gaussian/: camera.h  collide  collide.h  gaussian.cpp  gaussian.h  kdtree.cpp  kdtree.h  main.cpp  o2render  render  scene.cpp
Gaussian_cuda/: CMakeLists.txt  bvh.cu  collide1.cpp  diff_render.py  envmap.cpp  envmap.h  gaussian.cpp  gaussian.h  gaussian_bbox.cu  gaussian_bbox.h  gaussian_c.h  kdtree_c.cu  main.cpp  newcollide  port.cpp  ray.h  render_c.cu  scene.cpp  train.py  utils.cpp
Gaussian_cuda/gaussian_renderer/: __init__.py
Gaussian_cuda/scene/: __init__.py  gaussian_model.py
Gaussian_cuda_torch/: CMakeLists.txt  collide.h  collide1  cuda_render  diff_render.py  gaussian_bbox.cu  gaussian_bbox.h  o2render  port.cpp  port_1.cpp  render_c.cu  render_c.h  sampleray.cpp  scene.h  train.py  utils.h
Gaussian_cuda_torch/gaussian_renderer/: __init__.py
Gaussian_cuda_torch/scene/: __init__.py  gaussian_model.py
MathLib/: FloatStructs.h  SphericalHarmonic.cpp  Trigonometric.h
Shading/: Disney.cpp  Disney.h  Ggx.cpp  SurfaceParameters.cpp  SurfaceParameters.h  SurfaceScattering.h  disney
SystemLib/: BasicTypes.h  MemoryAllocation.cpp
TextureLib/: TextureCache.h
UtilityLib/: MurmurHash.h
utils/: render_utils.py
